--- a/hypex/CMakeLists.txt
+++ b/hypex/CMakeLists.txt
@@ -14,5 +14,5 @@ else()
 endif()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Wall -Wextra -Wno-unused-parameter")
 
-add_executable(hypex src/sandbox.cpp)
+add_executable(hypex src/sandbox.cpp src/utils.cpp)
 target_link_libraries(hypex cgroup)
