--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,32 @@
+alabaster==0.7.7
+argh==0.26.1
+astroid==1.4.4
+Babel==2.2.0
+backports-abc==0.4
+breathe==4.1.0
 cffi==1.5.2
+colorama==0.3.6
+cpplint==1.0.1
+docutils==0.12
 hiredis==0.2.0
+Jinja2==2.8
+lazy-object-proxy==1.2.1
+livereload==2.4.1
+MarkupSafe==0.23
+pathtools==0.1.2
+port-for==0.3.1
 pycparser==2.14
+Pygments==2.1.1
+pylint==1.5.4
+pytz==2015.7
+PyYAML==3.11
 redis==2.10.5
+six==1.10.0
+snowballstemmer==1.2.1
+Sphinx==1.3.5
+sphinx-autobuild==0.6.0
+sphinx-rtd-theme==0.1.9
 tornado==4.3
+watchdog==0.8.3
 wheel==0.29.0
+wrapt==1.10.6
