--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: cpp    
+sudo: required
+dist: trusty
 
 before_install:
     - sudo apt-get install -y build-essential cmake libcgroup-dev
@@ -6,7 +8,9 @@ before_install:
 install:
     - mkdir lib
 
-script:
+before_script:
     - cd lib
+
+script:
     - cmake ..
     - make
