--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,44 @@
-language: cpp    
 sudo: required
 dist: trusty
 
+language: cpp
+matrix:
+    include:
+	- compiler: gcc
+	    addons:
+		apt:
+		    sources:
+			- ubuntu-toolchain-r-test
+		    packages:
+			- g++-4.9
+	    env: COMPILER=g++-4.9
+	- compiler: gcc
+	    addons:
+		apt:
+		    sources:
+			- ubuntu-toolchain-r-test
+		    packages:
+			- g++-5
+	    env: COMPILER=g++-5
+	- compiler: clang
+	    addons:
+		apt:
+		    sources:
+			- ubuntu-toolchain-r-test
+			- llvm-toolchain-precise-3.6
+		    packages:
+			- clang-3.6
+	    env: COMPILER=clang++-3.6
+
 before_install:
-    - sudo apt-get install -y build-essential cmake libcgroup-dev
+- sudo apt-get install -y build-essential cmake libcgroup-dev
 
 install:
-    - mkdir lib
+- mkdir lib
 
 before_script:
-    - cd lib
+- cd lib
 
 script:
-    - cmake ..
-    - make
+- cmake ..
+- make
