--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
         - ubuntu-toolchain-r-test
         packages:
         - g++-5
-env: COMPILER=g++-5
+env: CMAKE_CXX_COMPILER=g++-5
 
 before_install:
     - sudo apt-get install -y build-essential cmake libcgroup-dev
