--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ addons:
     apt:
         sources:
         - ubuntu-toolchain-r-test
-	- llvm-toolchain-precise-3.6
+        - llvm-toolchain-precise-3.6
         packages:
-	- clang-3.6
+        - clang-3.6
 
 before_install:
     - sudo apt-get install -y build-essential cmake libcgroup-dev
@@ -20,5 +20,5 @@ before_script:
     - cd lib
 
 script:
-    - clang-3.6 CXX=clang++-3.6 cmake ..
+    - CC=clang-3.6 CXX=clang++-3.6 cmake ..
     - make
