--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ addons:
 
 before_install:
     - sudo apt-get update
+    - sudo apt-get upgrade -y
     - sudo apt-get install -y build-essential cmake libcgroup-dev acl
-    - sudo apt-get upgrade lxc-docker
     - echo 'DOCKER_OPTS="-H tcp://127.0.0.1:2375 -H unix:///var/run/docker.sock -s devicemapper"' | sudo tee /etc/default/docker > /dev/null
     - sudo service docker restart
     - sleep 5
