--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,4 @@ script:
     - docker run --privileged=true judge /bin/sh -c 'cd judge && ./setup.sh && python3 -m tornado.test.runtests tests.TestDiff'
     - docker run --privileged=true judge /bin/sh -c 'cd judge && ./setup.sh && python3 -m tornado.test.runtests tests.TestIORedir'
     - docker run --privileged=true judge /bin/sh -c 'cd judge && ./setup.sh && python3 -m tornado.test.runtests tests.TestWebSock'
+    - docker run --privileged=true judge /bin/sh -c 'cd judge && ./setup.sh && python3 -m tornado.test.runtests tests.TestRequest'
