Upgrade to 18.04. Fix RE bugs

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,49 @@
-alabaster==0.7.7
-argh==0.26.1
-astroid==1.4.4
-Babel==2.2.0
-backports-abc==0.4
-breathe==4.1.0
-cffi==1.5.2
-colorama==0.3.6
-cpplint==1.0.1
-docutils==0.12
-hiredis==0.2.0
-Jinja2==2.8
-lazy-object-proxy==1.2.1
-livereload==2.4.1
-MarkupSafe==0.23
+alabaster==0.7.12
+argh==0.26.2
+astroid==2.2.5
+Babel==2.7.0
+backports-abc==0.5
+breathe==4.13.0.post0
+certifi==2019.6.16
+cffi==1.12.3
+chardet==3.0.4
+colorama==0.4.1
+cpplint==1.4.4
+docutils==0.15
+hiredis==1.0.0
+idna==2.8
+imagesize==1.1.0
+isort==4.3.21
+Jinja2==2.10.1
+lazy-object-proxy==1.4.1
+livereload==2.6.1
+MarkupSafe==1.1.1
+mccabe==0.6.1
+packaging==19.0
 pathtools==0.1.2
+pkg-resources==0.0.0
 port-for==0.3.1
-pycparser==2.14
-Pygments==2.1.1
-pylint==1.5.4
-pytz==2015.7
-PyYAML==3.11
-redis==2.10.5
-six==1.10.0
-snowballstemmer==1.2.1
-Sphinx==1.3.5
-sphinx-autobuild==0.6.0
-sphinx-rtd-theme==0.1.9
-tornado==4.3
-watchdog==0.8.3
-wheel==0.29.0
-wrapt==1.10.6
+pycparser==2.19
+Pygments==2.4.2
+pylint==2.3.1
+pyparsing==2.4.1.1
+pytz==2019.1
+PyYAML==5.1.1
+redis==3.2.1
+requests==2.22.0
+six==1.12.0
+snowballstemmer==1.9.0
+Sphinx==2.1.2
+sphinx-autobuild==0.7.1
+sphinx-rtd-theme==0.4.3
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+tornado==4.5.3
+typed-ast==1.4.0
+urllib3==1.25.3
+watchdog==0.9.0
+wrapt==1.11.2
